add jwt & middleware

--- a/client/src/assets/scss/_site-blocks.scss
+++ b/client/src/assets/scss/_site-blocks.scss
@@ -520,8 +520,8 @@
 
 .btn-dark {
   &:hover {
-    background: $teal;
-    border-color: $teal;
+    background: $info;
+    border-color: $info;
     color: $white;
   }
 }
