--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -11,8 +11,9 @@
 @import "site-blocks";
 
 body {
-  font-family: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", Microsoft JhengHei;
+  font-family: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "PingFang TC", "Microsoft JhengHei", Sans-Serif;
   ;
+  letter-spacing: 0.075rem;
 }
 
 .object-cover {
@@ -27,4 +28,28 @@ body {
 
 .pointer {
   cursor: pointer;
+}
+
+.post-profile-thumbnail {
+  width: 45px;
+  height: 45px;
+  border-radius: 45px;
+}
+
+.carousel-item {
+  width: 100%;
+  height: 400px;
+  background-image: url('https://images.unsplash.com/photo-1580315362297-5be36f0de025?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2067&q=80');
+  background-position: center 40%;
+  background-size: cover;
+}
+
+.carousel-caption {
+  color: $secondary;
+  position: absolute;
+  top: 35%;
+
+  @media screen and (max-width:768px) {
+    top: 20%;
+  }
 }
